Add enrich source field mapper.
The enrich source field mapper stores the source of a document as
binary doc values. This is useful in cases where retrieval speeds
are more important than compact storage (which is what SourceFieldMapper does),
which is the case for the enrich processor.

Prior to this change enrich processor was using _source stored field
to fetch the enrich document to enrich document being ingested.

The enrich policy runner, when creating the enrich index, disables
_source meta field and enables the _enrich_source meta field.

The enrich source field mapper is an internal field, which is only
meant to be used by the enrich feature.

Relates to #41521 and #32789